--- a/en/index.html
+++ b/en/index.html
@@ -104,7 +104,8 @@
             <a href="https://www.youtube.com/channel/UCmZa_90rxRD08rDiSa7Nh2w" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
           </div> -->
 
-          <a href="https://exchange.pancakeswap.finance/#/swap" target="_blank" class="btn-get-pcs">Get it on PancakeSwap</a>
+          <a href="https://exchange.pancakeswap.finance/#/swap" target="_blank" class="btn-get-pcs">Get it on
+            PancakeSwap</a>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
           <img src="/assets/img/hero-img.png" class="img-fluid animated" alt="">
@@ -127,38 +128,38 @@
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
             <p><a href="https://www.youtube.com/channel/UCmZa_90rxRD08rDiSa7Nh2w" target="_blank">
-              <img src="/assets/img/communities/youtube.png" class="img-fluid" alt="YouTube">
-            </a></p>
+                <img src="/assets/img/communities/youtube.png" class="img-fluid" alt="YouTube">
+              </a></p>
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
             <p><a href="https://discord.gg/NA8YnT38sn" target="_blank">
-            <img src="/assets/img/communities/discord.png" class="img-fluid" alt="Discord">
-            </a></p>
+                <img src="/assets/img/communities/discord.png" class="img-fluid" alt="Discord">
+              </a></p>
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
             <p><a href="https://twitter.com/HabeoToken" target="_blank">
-            <img src="/assets/img/communities/twitter.png" class="img-fluid" alt="Twitter">
-            </a></p>
+                <img src="/assets/img/communities/twitter.png" class="img-fluid" alt="Twitter">
+              </a></p>
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
             <p><a href="https://www.reddit.com/r/HabeoToken/" target="_blank">
-            <img src="/assets/img/communities/reddit.png" class="img-fluid" alt="Reddit">
-            </a></p>
+                <img src="/assets/img/communities/reddit.png" class="img-fluid" alt="Reddit">
+              </a></p>
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
             <p><a href="https://github.com/HABEOLLC" target="_blank">
-            <img src="/assets/img/communities/github.png" class="img-fluid" alt="GitHub">
-            </a></p>
+                <img src="/assets/img/communities/github.png" class="img-fluid" alt="GitHub">
+              </a></p>
           </div>
-          
+
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
             <p><a href="https://bscscan.com/token/0xXXXXXX" target="_blank">
-            <img src="/assets/img/communities/binance.png" class="img-fluid" alt="Binance">
-            </a></p>
+                <img src="/assets/img/communities/binance.png" class="img-fluid" alt="Binance">
+              </a></p>
           </div>
 
 
@@ -166,7 +167,8 @@
         </div>
 
       </div>
-    </section><!--End Communities Section-->
+    </section>
+    <!--End Communities Section-->
 
     <!-- ======= About Us Section ======= -->
     <section id="about" class="about">
