--- a/es/index.html
+++ b/es/index.html
@@ -104,7 +104,8 @@
             <a href="https://www.youtube.com/channel/UCmZa_90rxRD08rDiSa7Nh2w" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
           </div> -->
 
-          <a href="https://exchange.pancakeswap.finance/#/swap" target="_blank" class="btn-get-pcs">Obtenelo en PancakeSwap</a>
+          <a href="https://exchange.pancakeswap.finance/#/swap" target="_blank" class="btn-get-pcs">Obtenelo en
+            PancakeSwap</a>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
           <img src="/assets/img/hero-img.png" class="img-fluid animated" alt="">
@@ -117,54 +118,55 @@
 
   <main id="main">
 
-       <!-- ======= Communities Section ======= -->
-       <section id="communities" class="communities section-bg">
-        <div class="container">
-          <div class="section-title">
-            <h2>Comunidades</h2>
-          </div>
-          <div class="row" data-aos="zoom-in">
-  
-            <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-              <p><a href="https://www.youtube.com/channel/UCmZa_90rxRD08rDiSa7Nh2w" target="_blank">
+    <!-- ======= Communities Section ======= -->
+    <section id="communities" class="communities section-bg">
+      <div class="container">
+        <div class="section-title">
+          <h2>Comunidades</h2>
+        </div>
+        <div class="row" data-aos="zoom-in">
+
+          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+            <p><a href="https://www.youtube.com/channel/UCmZa_90rxRD08rDiSa7Nh2w" target="_blank">
                 <img src="/assets/img/communities/youtube.png" class="img-fluid" alt="YouTube">
               </a></p>
-            </div>
-  
-            <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-              <p><a href="https://discord.gg/NA8YnT38sn" target="_blank">
-              <img src="/assets/img/communities/discord.png" class="img-fluid" alt="Discord">
-              </a></p>
-            </div>
-  
-            <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-              <p><a href="https://twitter.com/HabeoToken" target="_blank">
-              <img src="/assets/img/communities/twitter.png" class="img-fluid" alt="Twitter">
-              </a></p>
-            </div>
-  
-            <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-              <p><a href="https://www.reddit.com/r/HabeoToken/" target="_blank">
-              <img src="/assets/img/communities/reddit.png" class="img-fluid" alt="Reddit">
-              </a></p>
-            </div>
-  
-            <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-              <p><a href="https://github.com/HABEOLLC" target="_blank">
-              <img src="/assets/img/communities/github.png" class="img-fluid" alt="GitHub">
-              </a></p>
-            </div>
-            
-            <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-              <p><a href="https://bscscan.com/token/0xXXXXXX" target="_blank">
-              <img src="/assets/img/communities/binance.png" class="img-fluid" alt="Binance">
-              </a></p>
-            </div>
-  
           </div>
-  
+
+          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+            <p><a href="https://discord.gg/NA8YnT38sn" target="_blank">
+                <img src="/assets/img/communities/discord.png" class="img-fluid" alt="Discord">
+              </a></p>
+          </div>
+
+          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+            <p><a href="https://twitter.com/HabeoToken" target="_blank">
+                <img src="/assets/img/communities/twitter.png" class="img-fluid" alt="Twitter">
+              </a></p>
+          </div>
+
+          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+            <p><a href="https://www.reddit.com/r/HabeoToken/" target="_blank">
+                <img src="/assets/img/communities/reddit.png" class="img-fluid" alt="Reddit">
+              </a></p>
+          </div>
+
+          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+            <p><a href="https://github.com/HABEOLLC" target="_blank">
+                <img src="/assets/img/communities/github.png" class="img-fluid" alt="GitHub">
+              </a></p>
+          </div>
+
+          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+            <p><a href="https://bscscan.com/token/0xXXXXXX" target="_blank">
+                <img src="/assets/img/communities/binance.png" class="img-fluid" alt="Binance">
+              </a></p>
+          </div>
+
         </div>
-      </section><!--End Communities Section-->
+
+      </div>
+    </section>
+    <!--End Communities Section-->
 
     <!-- ======= About Us Section ======= -->
     <section id="about" class="about">
@@ -242,8 +244,8 @@
                     <p>
                       Esta descripción fué escrita desde cero intentando ser un documento detallado de la filosofía de
                       HABEO, sus objetivos y cualidades.<BR />
-                    <div><a href="whitepaper.html" target="_blank"
-                        class="download scrollto">Leer descripción completa</a></div>
+                    <div><a href="whitepaper.html" target="_blank" class="download scrollto">Leer descripción
+                        completa</a></div>
                     </p>
                   </div>
                 </li>
