--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <script>
     var language = window.navigator.userLanguage || window.navigator.language;
-    switch (language.substring(0,2).toLowerCase()) {
+    switch (language.substring(0, 2).toLowerCase()) {
         case ("en"):
             window.location.href = "/en/index.html";
             break;
@@ -19,4 +19,4 @@
         default:
             window.location.href = "/en/index.html";
     }
-    </script>
+</script>
