added contract address

--- a/en/index.html
+++ b/en/index.html
@@ -157,7 +157,7 @@
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <p><a href="https://bscscan.com/token/0xXXXXXX" target="_blank">
+            <p><a href="https://bscscan.com/token/0x8EdC50B23d2a8de5F8e07cB155A703F9dfBaC63D" target="_blank">
                 <img src="/assets/img/communities/binance.png" class="img-fluid" alt="Binance">
               </a></p>
           </div>
