--- a/pt/howtoacquire.html
+++ b/pt/howtoacquire.html
@@ -23,7 +23,7 @@ If the transaction does fail because of low gas, try again offering a higher gas
 ### Pancakeswap swaps
 Swaps for HABEO are like any BEP-20 tokens swap.
 
-The contract number is **0x8EdC50B23d2a8de5F8e07cB155A703F9dfBaC63D**.
+The contract address is **0x8EdC50B23d2a8de5F8e07cB155A703F9dfBaC63D**.
 
 Because of the taxes, you should leave the slippage percentage high.
 
