--- a/es/index.html
+++ b/es/index.html
@@ -107,7 +107,7 @@
           <a href="https://exchange.pancakeswap.finance/#/swap" target="_blank" class="btn-get-pcs">Obtenelo en
             PancakeSwap</a>
             <BR />
-            Dirección del contrato: 0x8EdC50B23d2a8de5F8e07cB155A703F9dfBaC63D
+            <h3>Dirección del contrato: 0x8EdC50B23d2a8de5F8e07cB155A703F9dfBaC63D</h3>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
           <img src="/assets/img/hero-img.png" class="img-fluid animated" alt="">
