added documents placeholders for FR and IT

--- a/fr/index.html
+++ b/fr/index.html
@@ -44,9 +44,13 @@
   <header id="header" class="fixed-top ">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo me-auto"><a href="index.html">Habeo</a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo me-auto"><img src="/assets/img/logo.png" alt="" class="img-fluid"></a>-->
+      <h1 class="logo me-auto">
+
+        <!-- Uncomment below if you prefer to use an image logo -->
+        <a href="index.html" class="logo me-auto">
+          <img src="/assets/img/logo1024x1024.png" alt="" class="img-fluid"></a>
+        <a href="index.html">Habeo</a>
+      </h1>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -73,10 +77,10 @@
             </ul>
           </li> -->
           <li><a class="nav-link scrollto" href="#footer">Contact</a></li>
-          <li>
+          <!-- <li>
             <div><a href="https://exchange.pancakeswap.finance/#/swap" target="_blank" class="getstarted scrollto">Get
                 it on PancakeSwap</a></div>
-          </li>
+          </li> -->
           <!-- <li><a class="getstarted scrollto" href="#about">Get Started</a></li> -->
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -100,7 +104,10 @@
             <a href="https://www.youtube.com/channel/UCmZa_90rxRD08rDiSa7Nh2w" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
           </div> -->
 
-          <!-- <a href="https://pancakeswap.finance" target="_blank" class="btn-get-pcs">Get it on PancakeSwap</a> -->
+          <a href="https://exchange.pancakeswap.finance/#/swap" target="_blank" class="btn-get-pcs">Get it on
+            PancakeSwap</a>
+            <BR />
+            <h3 style="color: white; font-weight: bold; font-size: 30px;">Contract address: 0x8EdC50B23d2a8de5F8e07cB155A703F9dfBaC63D</h3>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in" data-aos-delay="200">
           <img src="/assets/img/hero-img.png" class="img-fluid animated" alt="">
@@ -113,45 +120,57 @@
 
   <main id="main">
 
-    <!-- ======= Exchanges Section ======= -->
-    <section id="exchanges" class="exchanges section-bg">
+    <!-- ======= Communities Section ======= -->
+    <section id="communities" class="communities section-bg">
       <div class="container">
         <div class="section-title">
-          <h2>Exchanges</h2>
+          <h2>Communities</h2>
         </div>
         <div class="row" data-aos="zoom-in">
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="/assets/img/exchanges/pcs.png" class="img-fluid" alt="PancakeSwap">
-          </div>
-          <!-- <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="/assets/img/exchanges/client-1.png" class="img-fluid" alt="">
-          </div>
-
-          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="/assets/img/exchanges/client-2.png" class="img-fluid" alt="">
+            <p><a href="https://www.youtube.com/channel/UCmZa_90rxRD08rDiSa7Nh2w" target="_blank">
+                <img src="/assets/img/communities/youtube.png" class="img-fluid" alt="YouTube">
+              </a></p>
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="/assets/img/exchanges/client-3.png" class="img-fluid" alt="">
+            <p><a href="https://discord.gg/NA8YnT38sn" target="_blank">
+                <img src="/assets/img/communities/discord.png" class="img-fluid" alt="Discord">
+              </a></p>
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="/assets/img/exchanges/client-4.png" class="img-fluid" alt="">
+            <p><a href="https://twitter.com/HabeoToken" target="_blank">
+                <img src="/assets/img/communities/twitter.png" class="img-fluid" alt="Twitter">
+              </a></p>
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="/assets/img/exchanges/client-5.png" class="img-fluid" alt="">
+            <p><a href="https://www.reddit.com/r/HabeoToken/" target="_blank">
+                <img src="/assets/img/communities/reddit.png" class="img-fluid" alt="Reddit">
+              </a></p>
           </div>
 
           <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-            <img src="/assets/img/exchanges/client-6.png" class="img-fluid" alt="">
-          </div> -->
+            <p><a href="https://github.com/HABEOLLC" target="_blank">
+                <img src="/assets/img/communities/github.png" class="img-fluid" alt="GitHub">
+              </a></p>
+          </div>
+
+          <div class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+            <p><a href="https://bscscan.com/token/0x8EdC50B23d2a8de5F8e07cB155A703F9dfBaC63D" target="_blank">
+                <img src="/assets/img/communities/binance.png" class="img-fluid" alt="Binance">
+              </a></p>
+          </div>
+
+
 
         </div>
 
       </div>
-    </section><!-- End Exchanges Section -->
+    </section>
+    <!--End Communities Section-->
 
     <!-- ======= About Us Section ======= -->
     <section id="about" class="about">
@@ -212,7 +231,7 @@
                   terms</strong> and in <strong>multiple languages.</strong></h3>
               <p>
                 We think that everyone should be able to understand what HABEO does and how it does it. <BR />
-                We think that veryone should understand HABEO's goals and how they will be reached.
+                We think that everyone should understand HABEO's goals and how they will be reached.
               </p>
             </div>
 
@@ -248,7 +267,7 @@
                     <p>
                       There are a couple ways in which HABEO can be obtained. This document explains them and will be
                       updated when new ways of acquiring HABEO come to existence.
-                    <div><a href="https://www.google.com" target="_blank" class="download scrollto">Read How To
+                    <div><a href="howtoacquire.html" target="_blank" class="download scrollto">Read How To
                         Acquire</a></div>
                     </p>
                   </div>
@@ -901,7 +920,7 @@
               <!-- <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
               <!-- <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
               <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
-              <!-- <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a> -->
+              <a href="https://github.com/HABEOLLC" class="github"><i class="bx bxl-github"></i></a>
               <a href="https://discord.gg/NA8YnT38sn" class="discord"><i class="bx bxl-discord"></i></a>
               <a href="https://www.reddit.com/r/HabeoToken/" class="reddit"><i class="bx bxl-reddit"></i></a>
               <a href="https://www.youtube.com/channel/UCmZa_90rxRD08rDiSa7Nh2w" class="youtube"><i
